force-app/main/default/objects/User_To_Account__c/User_To_Account__c.object-meta.xml
<CustomObject>
    <label>User To Account</label>
    <nameField>
        <displayFormat>UTA-{0000}</displayFormat>
        <label>User To Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User To Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>