force-app/main/default/objects/User_To_Account__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(ISBLANK(Account__r.Name), Account__r.FirstName &amp; &apos; &apos; &amp; Account__r.LastName, Account__r.Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>