force-app/main/default/objects/User_To_Account__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <label>Follow Up Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>