force-app/main/default/objects/User_To_Account__c/fields/Realtor_Group__c.field-meta.xml
<CustomField>
    <fullName>Realtor_Group__c</fullName>
    <formula>TEXT(Account__r.Realtor_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realtor Group</label>
    <type>Text</type>
</CustomField>