force-app/main/default/objects/User_To_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred LO</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>