force-app/main/default/objects/User_To_Account__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>User__r.FirstName &amp; &apos; &apos; &amp; User__r.LastName</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>