force-app/main/default/objects/User_To_Account__c/fields/User_To_Account_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>User_To_Account_Unique_Id__c</fullName>
    <formula>CASESAFEID(Account__c) &amp; &apos;:&apos; &amp;  CASESAFEID(User__c)</formula>
    <label>User To Account Unique Id</label>
    <type>Text</type>
</CustomField>